bluejay-typegen/tests/validation_cases/error/extraneous_custom_scalar_alias.rs
#[bluejay_typegen::typegen([
    type Query {
        foo: String
    }
])]
mod schema {
    type Foo = String;
}

fn main() {}
